Issue 257:	New Menu Administration Console
Update issue 257
Update preferences of widget, when updating menu item settings.

git-svn-id: https://infoscoop.googlecode.com/svn/branches/3.0@882 d4e23b88-c782-11de-b6dc-25c59a28ecba